# personal_profile_website

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  package-lock.json  package.json  resume_extract.txt  tech_stack_recommendations.md  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/blog/: page.tsx
app/blog/[slug]/: page.tsx
components/blog/: article-card.tsx  article-meta.tsx  related-articles.tsx
components/home/: coding-pulse-server.tsx  coding-pulse.tsx  hero-like-button.tsx  hero-orbit.tsx  home-snap-shell.tsx  scroll-reveal.tsx
components/theme/: theme-provider.tsx  theme-toggle.tsx
content/blog/: building-jared-home.md  demo.md  network-debugging-notes.md
data/: site-content.ts
deploy/nginx/: personal-profile.conf
docs/superpowers/plans/: 2026-04-16-home-scroll-snap.md  2026-04-16-portfolio-blog-upgrade.md  2026-04-16-technical-brand-redesign.md  2026-04-17-hero-glass-and-performance.md  2026-04-17-local-like-and-nav-contrast.md  2026-04-17-nav-and-shared-like.md
docs/superpowers/specs/: 2026-04-16-home-scroll-snap-design.md  2026-04-16-portfolio-blog-design.md  (+4 more)
lib/: blog.test.ts  blog.ts  hero-like.server.test.ts  hero-like.server.ts  hero-like.ts  wakatime-cache.server.test.ts  wakatime-cache.server.ts  wakatime.test.ts  wakatime.ts
public/: app.js  index.html  styles.css
src/: main.cpp
tests/: blog-index.test.tsx  coding-pulse.test.tsx  hero-like-button.test.tsx  home-snap-shell.test.tsx  home.test.tsx  scroll-reveal.test.tsx  theme-provider.test.tsx  theme-toggle.test.tsx
(+2 files in other folders)
